@@ -17,6 +17,7 @@ using namespace DFHack;
 #include "tweaks/eggs-fertile.h"
 #include "tweaks/fast-heat.h"
 #include "tweaks/flask-contents.h"
+#include "tweaks/named-codices.h"
 #include "tweaks/partial-items.h"
 #include "tweaks/reaction-gloves.h"
 
@@ -59,6 +60,8 @@ DFhackCExport command_result plugin_init(color_ostream &out, vector<PluginComman
     TWEAK_HOOK("fast-heat", fast_heat_hook, adjustTemperature);
 
     TWEAK_HOOK("flask-contents", flask_contents_hook, getItemDescription);
+
+    TWEAK_HOOK("named-codices", book_hook, getItemDescription);
 
     TWEAK_HOOK("partial-items", partial_items_hook_bar, getItemDescription);
     TWEAK_HOOK("partial-items", partial_items_hook_drink, getItemDescription);
